--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -35,6 +35,7 @@
                         </div>
                         <div>
                             <input type="text" id="gotcha" name="_gotcha" style="display:none" />
+                            <input type="hidden" id="next" name="_next" value="http://localhost:4000" />
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
