--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,70 +1,72 @@
  <!-- Portfolio Modals -->
  {% for post in site.posts %}
-    <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
+    {% if post.categories contains 'Projects' %}
+        <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>{{ post.title }}</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <!--<div id="projectCarousel" class="carousel slide " data-ride="carousel">
-                                <div class="carousel-inner" role="listbox">
-                                    <div class="item active">
-                                        
-                                    </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>{{ post.title }}</h2>
+                                <hr class="star-primary">
+                                <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                <!--<div id="projectCarousel" class="carousel slide " data-ride="carousel">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="item active">
+
+                                        </div>
 
 
-                                    <div class="item">
-                                        <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                        <div class="item">
+                                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                        </div>
                                     </div>
-                                </div>
-                                
-                                <a class="left carousel-control" href="#projectCarousel" role="button" data-slide="prev">
-                                  <i class="fa fa-chevron-left" aria-hidden="right"></i>
-                                  <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="right carousel-control" href="#projectCarousel" role="button" data-slide="next">
-                                  <i class="fa fa-chevron-right" aria-hidden="right"></i>
-                                  <span class="sr-only">Next</span>
-                                </a>
-                            </div>-->
-                            
-                            <p>{{ post.description }}</p>
-                            {% if post.download.url.size %}
-                                <ul class="list-inline">
-                                    <li>
-                                        <a href="{{ post.download.url }}" class="btn btn-primary btn-primary" download><i class="fa fa-download"></i> Download</a>
+
+                                    <a class="left carousel-control" href="#projectCarousel" role="button" data-slide="prev">
+                                      <i class="fa fa-chevron-left" aria-hidden="right"></i>
+                                      <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" href="#projectCarousel" role="button" data-slide="next">
+                                      <i class="fa fa-chevron-right" aria-hidden="right"></i>
+                                      <span class="sr-only">Next</span>
+                                    </a>
+                                </div>-->
+
+                                <p>{{ post.description }}</p>
+                                {% if post.download.url.size %}
+                                    <ul class="list-inline">
+                                        <li>
+                                            <a href="{{ post.download.url }}" class="btn btn-primary btn-primary" download><i class="fa fa-download"></i> Download</a>
+                                        </li>
+                                        {% if post.download.source.size %}
+                                        <li>
+                                            <a href="{{ post.download.source }}" class="btn btn-primary btn-primary"><i class="fa fa-code"></i> Source</a>
+                                        </li>
+                                        {% endif %}
+                                    </ul>
+                                {% endif %}
+                                <ul class="list-inline item-details">
+                                    <li>For:
+                                        <strong><a href="{{ post.for.url }}">{{ post.for.name }}</a>
+                                        </strong>
                                     </li>
-                                    {% if post.download.source.size %}
-                                    <li>
-                                        <a href="{{ post.download.source }}" class="btn btn-primary btn-primary"><i class="fa fa-code"></i> Source</a>
+                                    <li>Date:
+                                        <strong>{{ post.project-date }}
+                                        </strong>
                                     </li>
-                                    {% endif %}
                                 </ul>
-                            {% endif %}
-                            <ul class="list-inline item-details">
-                                <li>For:
-                                    <strong><a href="{{ post.for.url }}">{{ post.for.name }}</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong>{{ post.project-date }}
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 {% endfor %}
