--- a/_includes/pro_background.html
+++ b/_includes/pro_background.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Professional Background</h2>
+                    <h2>Background</h2>
                     <hr class="star-light">
                 </div>
             </div>
