--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,9 @@
                 <div class="col-sm-7 col-lg-7">
                     <div class="intro-text page-descr">
                         <p class="page-descr-text">
-                            Hi! I'm a <span style="color: #9BFF00"><b>computer science student</b></span>, <span style="color: #FFF900"><b>back-end developer</b></span> and <span style="color: #F9AD76"><b>roleplay hobbyist</b></span>.
+                            Hi! I'm a <b>Software Engineer</b>
+                            working at <a href="https://www.chilltime.com/" target=”_blank” rel=”noopener noreferrer”>Chilltime</a>,
+                            using <b>Unity</b>, <b>React</b> and <b>PHP</b>.
                         </p>
                         <p class="page-descr-text">
                             Below you will find some of my previous and current projects, as well as my work and educational background.
