--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                     <div class="intro-text page-descr">
                         <p class="page-descr-text">
                             Hi! I'm a <b>Software Engineer</b>
-                            working at <a href="https://www.chilltime.com/" target=”_blank” rel=”noopener noreferrer”>Chilltime</a>,
+                            working at <a href="https://www.chilltime.com/" target="_blank" rel="noopener noreferrer">Chilltime</a>,
                             using <b>Unity</b>, <b>React</b> and <b>PHP</b>.
                         </p>
                         <p class="page-descr-text">
