--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -108,7 +108,7 @@ header .intro-text .skills {
 }
 
 header .page-descr {
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 header .page-descr .page-descr-text {
@@ -149,21 +149,54 @@ header a.active {
 }
 
 @media(min-width:768px) {
+    header .header_row {
+        display: flex;
+        padding-bottom: 20px;
+    }
+
+    header .foto {
+        max-width: 95px;
+        max-height: 95px;
+        margin: 0 20px;
+    }
+
     header .container {
-        padding-top: 150px;
-        padding-bottom: 100px;
+        padding-top: 130px;
+        padding-bottom: 0px;
+    }
+
+    header .intro-text {
+        flex: 1;
     }
 
     header .intro-text .name {
-        font-size: 4.75em;
+        font-size: 1.6em;
     }
 
     header .intro-text .skills {
-        font-size: 1.75em;
+        font-size: 1.25em;
     }
     
+    header .skills_container{
+        text-align: left;
+    }
+
+    header .button-section {
+        margin: 0 10px;
+        padding-top: 5px;
+    }
+
+    header .social-section {
+        margin: 0 10px;
+        padding-top: 10px;
+    }
+
     header .page-descr .page-descr-text {
-        font-size: 1.7em;
+        font-size: 1.5em;
+    }
+
+    header .page-descr {
+        padding-top: 7px;
     }
 }
 
@@ -394,13 +427,22 @@ footer .footer-below {
 
 .btn-social {
     display: inline-block;
-    width: 50px;
-    height: 50px;
     border: 2px solid #fff;
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
+    
+    width: 50px;
+    height: 50px;
     line-height: 45px;
+}
+
+@media(min-width:768px) {
+    .btn-social {
+        width: 40px;
+        height: 40px;
+        line-height: 34px;
+    }
 }
 
 .btn:focus,
@@ -500,6 +542,7 @@ footer .footer-below {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
 }
+
 
 .vertical-align {
     display: flex;
