Updated with Hutch and Rebel Racing posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                 <div class="intro-text">
                     <div class="skills_container"> 
                         <span class="name">{{ site.title }}</span>
-                        <span class="skills">Sofware Engineer<br>@ <a href="https://www.chilltime.com/" target="_blank" rel="noopener noreferrer">Chilltime</a></span>
+                        <span class="skills">Unity Engineer<br>@ <a href="https://www.hutch.io/" target="_blank" rel="noopener noreferrer">Hutch</a></span>
                     </div>
                 </div>
                 <div class="button-section">
