--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,29 @@
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="header_row">
-                <img class="img-responsive foto" src="img/profile.png" alt="Photo" width="250px">
-                <div class="intro-text">
-                    <div class="skills_container"> 
-                        <span class="name">{{ site.title }}</span>
-                        <span class="skills">Senior Unity Engineer<br>@ <a href="https://www.hutch.io/" target="_blank" rel="noopener noreferrer">Hutch</a></span>
-                    </div>
-                </div>
-                <div class="button-section">
-                    <a href="/downloads/CV.pdf" class="btn btn-md btn-outline " download>
-                        <i class="fa fa-download"></i> Download CV
-                    </a>
-                </div>
-                <div class="social-section">
-                    <ul class="list-inline">
-                        {% for network in site.social %}
-                        <li>
-                            <a href="{{ network.url }}" class="btn-social btn-outline" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
-                        </li>
-                        {% endfor %}
-                    </ul>
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="header_row">
+            <img class="img-responsive foto" src="img/profile.png" alt="Photo" width="250px">
+            <div class="intro-text">
+                <div class="skills_container">
+                    <span class="name">{{ site.title }}</span>
+                    <span class="skills">Senior Unity Engineer</span>
                 </div>
             </div>
+            <div class="button-section">
+                <a href="/downloads/CV.pdf" class="btn btn-md btn-outline " download>
+                    <i class="fa fa-download"></i> Download CV
+                </a>
+            </div>
+            <div class="social-section">
+                <ul class="list-inline">
+                    {% for network in site.social %}
+                    <li>
+                        <a href="{{ network.url }}" class="btn-social btn-outline" target="_blank"
+                            rel="noopener noreferrer"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
